added all speakers

--- a/_includes/section-sponsors.html
+++ b/_includes/section-sponsors.html
@@ -1,7 +1,7 @@
 <section id="sponsor">
   <div>
 
-    {% if page.cfs %}
+    {% if site.data.config.call_for_sponsor %}
     <h3>Sponsorizza</h3>
     <p>
       Grandi sponsor ci aiutano a realizzare grandi eventi!
@@ -12,87 +12,87 @@
       <a href="/download/sponsor-presentation.pdf" target="_blank">sono disponibili qui</a>.
       <a href="mailto: info@grusp.org">Contattaci</a> per sapere come metterti in mostra al {{ page.title }}.
     </p>
+    <div>
+      <div class="half">
+        <h4 class="main">Main sponsor</h4>
+        <p>Il main sponsor sarà uno solo per conferenza ed avrà la possibilità di avere un banchetto indipendente per pubblicizzarsi</p>
+        <span class="euro btn">€ 5.000</span>
+        <ul class="benefit">
+          <li>Banner sul sito</li>
+          <li>Possibilità di tenere un talk
+            <strong>tecnico</strong> (sono escluse le tematiche commerciali).
+            <br>Il talk dovrà essere preapprovato dagli organizzatori.</li>
+          <li>Pubblicità nelle comunicazioni pre-evento</li>
+          <li>Autorizzazione a portare pubblicità e gadget (volantini, adesivi, magliette)</li>
+          <li>Presenza logo sul programma stampato</li>
+          <li>Posizionamento del vostro roll-up nella sala</li>
+          <li>5 biglietti gratuiti</li>
+          <li>
+            <strong>Banchetto principale 2m x 1m in sala o nella hall</strong>
+          </li>
+        </ul>
+      </div>
 
-    <div class="column_6">
-      <h4 class="main">Main sponsor</h4>
-      <p>Il main sponsor sarà uno solo per conferenza ed avrà la possibilità di avere un banchetto indipendente per pubblicizzarsi</p>
-      <span class="euro btn">€ 5.000</span>
-      <ul class="benefit">
-        <li>Banner sul sito</li>
-        <li>Possibilità di tenere un talk
-          <strong>tecnico</strong> (sono escluse le tematiche commerciali).
-          <br>Il talk dovrà essere preapprovato dagli organizzatori.</li>
-        <li>Pubblicità nelle comunicazioni pre-evento</li>
-        <li>Autorizzazione a portare pubblicità e gadget (volantini, adesivi, magliette)</li>
-        <li>Presenza logo sul programma stampato</li>
-        <li>Posizionamento del vostro roll-up nella sala</li>
-        <li>5 biglietti gratuiti</li>
-        <li>
-          <strong>Banchetto principale 2m x 1m in sala o nella hall</strong>
-        </li>
-      </ul>
+      <div class="half">
+        <h4 class="platinum">Platinum sponsor</h4>
+        <p>Un solo sponsor Platinum è ammesso per conferenza, ed avrà la possibilità di avere un banchetto indipendente per
+          pubblicizzarsi</p>
+        <span class="euro btn">€ 3.000</span>
+        <ul class="benefit">
+          <li>Banner sul sito</li>
+          <li>Pubblicità nelle comunicazioni pre-evento</li>
+          <li>Autorizzazione a portare pubblicità e gadget (volantini, adesivi, magliette)</li>
+          <li>Presenza logo sul programma stampato</li>
+          <li>Posizionamento del vostro roll-up nella sala</li>
+          <li>4 biglietti gratuiti</li>
+          <li>
+            <strong>Banchetto 1m x 1m in sala o nella hall</strong>
+          </li>
+        </ul>
+      </div>
     </div>
+    <div>
+      <div class="third">
+        <h4 class="gold">Gold</h4>
+        <span class="euro btn">€ 1.000</span>
+        <ul class="benefit">
+          <li>Banner sul sito</li>
+          <li>Pubblicità nelle comunicazioni pre-evento</li>
+          <li>Autorizzazione a portare pubblicità e gadget (ie. volantini, adesivi, magliette)</li>
+          <li>Presenza logo sul programma stampato</li>
+          <li>Posizionamento del vostro roll-up nella sala</li>
+          <li>3 biglietti gratuiti</li>
+        </ul>
+      </div>
 
-    <div class="column_6">
-      <h4 class="platinum">Platinum sponsor</h4>
-      <p>Un solo sponsor Platinum è ammesso per conferenza, ed avrà la possibilità di avere un banchetto indipendente per pubblicizzarsi</p>
-      <span class="euro btn">€ 3.000</span>
-      <ul class="benefit">
-        <li>Banner sul sito</li>
-        <li>Pubblicità nelle comunicazioni pre-evento</li>
-        <li>Autorizzazione a portare pubblicità e gadget (volantini, adesivi, magliette)</li>
-        <li>Presenza logo sul programma stampato</li>
-        <li>Posizionamento del vostro roll-up nella sala</li>
-        <li>4 biglietti gratuiti</li>
-        <li>
-          <strong>Banchetto 1m x 1m in sala o nella hall</strong>
-        </li>
-      </ul>
+      <div class="third">
+        <h4 class="silver">Silver</h4>
+        <span class="euro btn">€ 500</span>
+        <ul class="benefit">
+          <li>Banner sul sito</li>
+          <li>Pubblicità nelle comunicazioni pre-evento</li>
+          <li>Autorizzazione a portare pubblicità e gadget (ie. volantini, adesivi, magliette)</li>
+          <li>Presenza logo sul programma stampato</li>
+          <li>2 biglietti gratuiti</li>
+        </ul>
+      </div>
+
+      <div class="third">
+        <h4 class="bronze">Bronze</h4>
+        <span class="euro btn">€ 300</span>
+        <ul class="benefit">
+          <li>Banner sul sito</li>
+          <li>Autorizzazione a portare pubblicità e gadget (ie. volantini, adesivi, magliette)</li>
+          <li>1 biglietto gratuito</li>
+        </ul>
+      </div>
     </div>
-    <div class="clear"></div>
-
-    <div class="column_4">
-      <h4 class="gold">Gold</h4>
-      <span class="euro btn">€ 1.000</span>
-      <ul class="benefit">
-        <li>Banner sul sito</li>
-        <li>Pubblicità nelle comunicazioni pre-evento</li>
-        <li>Autorizzazione a portare pubblicità e gadget (ie. volantini, adesivi, magliette)</li>
-        <li>Presenza logo sul programma stampato</li>
-        <li>Posizionamento del vostro roll-up nella sala</li>
-        <li>3 biglietti gratuiti</li>
-      </ul>
-    </div>
-
-    <div class="column_4">
-      <h4 class="silver">Silver</h4>
-      <span class="euro btn">€ 500</span>
-      <ul class="benefit">
-        <li>Banner sul sito</li>
-        <li>Pubblicità nelle comunicazioni pre-evento</li>
-        <li>Autorizzazione a portare pubblicità e gadget (ie. volantini, adesivi, magliette)</li>
-        <li>Presenza logo sul programma stampato</li>
-        <li>2 biglietti gratuiti</li>
-      </ul>
-    </div>
-
-    <div class="column_4">
-      <h4 class="bronze">Bronze</h4>
-      <span class="euro btn">€ 300</span>
-      <ul class="benefit">
-        <li>Banner sul sito</li>
-        <li>Autorizzazione a portare pubblicità e gadget (ie. volantini, adesivi, magliette)</li>
-        <li>1 biglietto gratuito</li>
-      </ul>
-    </div>
-
-    <div class="clear"></div>
 
     {% endif %}
 
     <h3>Gli Sponsor</h3>
 
-<!-- 
+    <!-- 
     <div class="main_sponsor">
       <h4 class="main">Platinum</h4>
 
@@ -101,33 +101,28 @@
       <div class="clear"></div>
     </div> -->
 
+    <h4 class="gold">Gold</h4>
     <div class="gold_sponsors">
-      <h4 class="gold">Gold</h4>
-  
+
       <a class="banner" href="http://www.cnafe.it" title="CNA Ferrara">
-        <img src="./images/sponsors/cna.png" alt="sponsor CNA Ferrara"/>
+        <img src="./images/sponsors/cna.png" alt="sponsor CNA Ferrara" />
       </a>
-  
+
       <a class="banner" href="http://www.hoteltouringfe.it/" title="Hotel Touring Ferrara">
-        <img src="./images/sponsors/touring.png" alt="sponsor Hotel Touring Ferrara"/>
+        <img src="./images/sponsors/touring.png" alt="sponsor Hotel Touring Ferrara" />
       </a>
-  
-      <div class="clear"></div>
     </div>
 
+    <h4 class="silver">Silver</h4>
     <div class="silver_sponsors">
-      <h4 class="silver">Silver</h4>
 
       <a class="banner square" href="https://labs.madisoft.it/frontend-developer/" target="_blank" title="MadiSoft">
         <img src="./images/sponsors/logo-madisoft-quadrato.svg" alt="Sponsor MadiSoft" />
       </a>
-      
+
       <a class="banner" href="https://balsamiq.com" target="_blank" title="Balsamiq">
-        <img src="./images/sponsors/balsamiq-logo-noborder-screen.svg" alt="Sponsor Balsamiq"/>
+        <img src="./images/sponsors/balsamiq-logo-noborder-screen.svg" alt="Sponsor Balsamiq" />
       </a>
-
-
-      <div class="clear"></div>
     </div>
 
     <!-- <div class="bronze_sponsors">
@@ -144,16 +139,13 @@
       <div class="clear"></div>
     </div> -->
 
+    <h4 class="patr">In partnership con</h4>
     <div class="patr_sponsor">
-      <h4 class="patr">In partnership con</h4>
 
-      
+
       <a class="banner" href="http://www.jetbrains.com" target="_blank" title="JetBrains">
-        <img src="./images/sponsors/jetbrains.png" alt="Sponsor JetBrains"/>
+        <img src="./images/sponsors/jetbrains.png" alt="Sponsor JetBrains" />
       </a>
-
-      <div class="clear"></div>
     </div>
 
-    <div class="clear"></div>
 </section>
