--- a/_includes/section-videos.html
+++ b/_includes/section-videos.html
@@ -2,15 +2,15 @@
     <div>
         <h3>La scorsa edizione...</h3>
 
-        <div class="row">
-            <div class="column_3 video">
+        <div>
+            <div>
                 <a href="https://vimeo.com/218933677" target="_blank">
                     <img src="https://i.vimeocdn.com/video/636550216_780x439.jpg" alt="Progressive Web Apps: trick or real magick?" />
                     <span>Maurizio Mangione - Progressive web apps: trick or real magick?</span>
                 </a>
             </div>
 
-            <div class="column_3 video">
+            <div>
                 <a href="https://vimeo.com/218934169" target="_blank">
                     <img src="https://i.vimeocdn.com/video/636550691_780x439.jpg" alt="Hello Ball: un punto di partenza per applicazioni multi-piattaforma"
                     />
@@ -18,51 +18,49 @@
                 </a>
             </div>
 
-            <div class="column_3 video">
+            <div>
                 <a href="https://vimeo.com/218934567" target="_blank">
                     <img src="https://i.vimeocdn.com/video/636551467_780x439.jpg" alt="Matteo Frana - React SSR in the Wild: yes, we can (when we should)" />
                     <span>Matteo Frana - React SSR in the Wild: yes, we can (when we should)</span>
                 </a>
             </div>
 
-            <div class="column_3 video">
+            <div>
                 <a href="https://vimeo.com/218935040" target="_blank">
                     <img src="https://i.vimeocdn.com/video/636552335_780x439.jpg" alt="Andrea Coiutti - Applicazioni web isomorfiche: un caso di studio con MithrilJS" />
                     <span>Andrea Coiutti - Applicazioni web isomorfiche: un caso di studio con MithrilJS</span>
                 </a>
             </div>
         </div>
-        <div class="row">
+        <div>
 
-            <div class="column_3 video">
+            <div>
                 <a href="https://vimeo.com/218935584" target="_blank">
                     <img src="https://i.vimeocdn.com/video/636553271_780x439.jpg" alt="Francesco Strazzullo - WebGL 2D Rendering with PixiJS" />
                     <span>Francesco Strazzullo - WebGL 2D Rendering with PixiJS</span>
                 </a>
             </div>
 
-            <div class="column_3 video">
+            <div>
                 <a href="https://vimeo.com/218936193" target="_blank">
                     <img src="https://i.vimeocdn.com/video/636554343_780x439.jpg" alt="Giorgio Aquino - Web Push Notification" />
                     <span>Giorgio Aquino - Web Push Notification</span>
                 </a>
             </div>
 
-            <div class="column_3 video">
+            <div>
                 <a href="https://vimeo.com/218936860" target="_blank">
                     <img src="https://i.vimeocdn.com/video/636554914_780x439.jpg" alt="Luca Degasperi - Turbolinks, nativo con trucco?" />
                     <span>Luca Degasperi - Turbolinks, nativo con trucco?</span>
                 </a>
             </div>
 
-            <div class="column_3 video">
+            <div>
                 <a href="https://vimeo.com/218933677" target="_blank">
                     <img src="https://i.vimeocdn.com/video/636555450_780x439.jpg" alt="Francesco Raimondo - Introduzione a PhaserJS" />
                     <span>Francesco Raimondo - Introduzione a PhaserJS</span>
                 </a>
             </div>
         </div>
-        <div class="clear"></div>
-
     </div>
 </section>
