--- a/_includes/section-speakers.html
+++ b/_includes/section-speakers.html
@@ -6,13 +6,15 @@
             {% for event in site.data.events %}
             <div>
                 <div class="info">
-                    {{ event.time_start }} - {{ event.time_end }}
+                    {% if event.time_start %} {{ event.time_start }} - {{ event.time_end }} {% endif %}
                 </div>
                 <div class="detail">
                     <h4>{{ event.name }}</h4>
                     <div>
-                        <img src="images/speakers/{{ event.speaker_twitter }}.jpg" alt="{{ event.speaker_name }}" />
-                        <div>
+                        <div class="picture">
+                            <img src="images/speakers/{{ event.speaker_twitter }}.jpg" alt="{{ event.speaker_name }}" />
+                        </div>
+                        <div class="description">
                             <h5>{{ event.speaker_name }}</h5>
                             <p>{{ event.talk_abstract }}</p>
                         </div>
