--- a/_includes/section-sponsors.html
+++ b/_includes/section-sponsors.html
@@ -125,12 +125,12 @@
       </a>
     </div>
 
-    <!-- <div class="bronze_sponsors">
-      <h4 class="bronze">Bronze</h4>
-
-
-      <div class="clear"></div>
-    </div> -->
+    <h4 class="bronze">Bronze</h4>
+    <div class="bronze_sponsors">
+      <a class="banner" href="http://www.blexin.com" target="_blank" title="Blexin">
+        <img src="./images/sponsors/blexin-logo.svg" alt="Sponsor Blexin" />
+      </a>
+    </div>
 
 
     <!-- <div class="patr_sponsor">
