--- a/_includes/section-sponsors.html
+++ b/_includes/section-sponsors.html
@@ -130,6 +130,9 @@
       <a class="banner" href="http://www.blexin.com" target="_blank" title="Blexin">
         <img src="./images/sponsors/blexin-logo.svg" alt="Sponsor Blexin" />
       </a>
+      <a class="banner" href="http://www.mvlabs.it" title="MVLabs">
+        <img src="./images/sponsors/mvlabs.png" alt="sponsor MVLabs"/>
+      </a>
     </div>
 
 
