invertiti ferrarajs e grusp

--- a/_includes/section-contents.html
+++ b/_includes/section-contents.html
@@ -15,9 +15,7 @@
         </p>
 
         <p>
-            La conferenza è organizzata dal <a href="http://www.grusp.org">GrUSP</a> {% if site.data.config.partner %} e
-            da
-            <a href="{{ site.data.partner.url}}">{{ site.data.partner.name }}</a>{% endif %}
+            La conferenza è organizzata {% if site.data.config.partner %}da <a href="{{ site.data.partner.url}}">{{ site.data.partner.name }}</a> e{% endif %} dal <a href="http://www.grusp.org">GrUSP</a> 
         </p>
 
         <p>
