--- a/_includes/section-workshop.html
+++ b/_includes/section-workshop.html
@@ -41,8 +41,8 @@
                 <h4>Programma</h4>
                 <p>
                     Il workshop si svolgerà
-                    <strong>giovedì 19 aprile dalle 10:00 alle 13:00 e continuerà dalle 14:00 alle 18:00</strong> presso la
-                    <strong>sala direzione di CNA Ferrara</strong> in Via Caldirolo, 84 a Ferrara (la stessa sede della conferenza).
+                    <strong>giovedì 19 aprile dalle 10:00 alle 13:00</strong>, si fermerà per una pausa pranzo inclusa nel costo del biglietto, <strong> e continuerà dalle 14:00 alle 18:00</strong> presso la
+                    <strong>sala direzione di CNA Ferrara</strong> in Via Caldirolo, 84 a Ferrara (la stessa sede della conferenza). All'interno del biglietto sono inclusi due coffee break.
                 </p>
                 <ul>
                     <li>React.js: concetti fondamentali</li>
