add sponsor nethesis

--- a/_includes/section-sponsors.html
+++ b/_includes/section-sponsors.html
@@ -133,6 +133,9 @@
       <a class="banner" href="http://www.mvlabs.it" title="MVLabs">
         <img src="./images/sponsors/mvlabs.png" alt="sponsor MVLabs"/>
       </a>
+      <a class="banner" href="http://www.nethesis.it" title="Nethesis">
+        <img src="./images/sponsors/nethesis.svg" alt="sponsor Nethesis"/>
+      </a>
     </div>
 
 
