add accenture sponsor

--- a/_includes/section-sponsors.html
+++ b/_includes/section-sponsors.html
@@ -92,23 +92,24 @@
 
     <h3>Gli Sponsor</h3>
 
-    <!-- 
+    <h4 class="main">Main</h4>
     <div class="main_sponsor">
-      <h4 class="main">Platinum</h4>
+
+      <a class="banner" href="http://www.accenture.com/it-it/" target="_blank" title="Accenture">
+        <img src="./images/sponsors/accenture.svg" alt="sponsor Accenture" />
+      </a>
 
 
-
-      <div class="clear"></div>
-    </div> -->
+    </div>
 
     <h4 class="gold">Gold</h4>
     <div class="gold_sponsors">
 
-      <a class="banner" href="http://www.cnafe.it" title="CNA Ferrara">
+      <a class="banner" href="http://www.cnafe.it" target="_blank" title="CNA Ferrara">
         <img src="./images/sponsors/cna.png" alt="sponsor CNA Ferrara" />
       </a>
 
-      <a class="banner" href="http://www.hoteltouringfe.it/" title="Hotel Touring Ferrara">
+      <a class="banner" href="http://www.hoteltouringfe.it/" target="_blank" title="Hotel Touring Ferrara">
         <img src="./images/sponsors/touring.png" alt="sponsor Hotel Touring Ferrara" />
       </a>
     </div>
@@ -130,10 +131,10 @@
       <a class="banner" href="http://www.blexin.com" target="_blank" title="Blexin">
         <img src="./images/sponsors/blexin-logo.svg" alt="Sponsor Blexin" />
       </a>
-      <a class="banner" href="http://www.mvlabs.it" title="MVLabs">
+      <a class="banner" href="http://www.mvlabs.it" target="_blank" title="MVLabs">
         <img src="./images/sponsors/mvlabs.png" alt="sponsor MVLabs"/>
       </a>
-      <a class="banner" href="http://www.nethesis.it" title="Nethesis">
+      <a class="banner" href="http://www.nethesis.it" target="_blank" title="Nethesis">
         <img src="./images/sponsors/nethesis.svg" alt="sponsor Nethesis"/>
       </a>
     </div>
